--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <div id="calcButtons" class="col-xs-6 well">
           <div class="row">
             <div class="col-xs-6">
-              <p id="equation">&nbsp;</p>
+              <!--Not ready yet -->
+              <!-- <p id="equation">&nbsp;</p> -->
             </div>
             <div class="col-xs-6">
               <!-- <p>Current value: </p> -->
