Add flex example

--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
         <p id="result">0</p>
       </div>
     </div>
+    <div class="row">
+      <p>A version with an update to the UI and using <a href="https://www.w3.org/TR/css-flexbox-1/">flex</a> can be found <a href="./index_flex.html">here.</a></p>
+    </div>
   </div>
   <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
   <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>
