--- a/index.html
+++ b/index.html
@@ -1,120 +1,38 @@
 <!DOCTYPE html>
-<html >
-<head>
-  <meta charset="UTF-8">
-  <title>JavaScript Calculator</title>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>JavaScript Calculator</title>
+    
+    <link rel="stylesheet" href="css/style_flex.css">
   
-  <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
-  <link rel="stylesheet" href="css/style.css">
-  
-</head>
-
-<body>
-  <div class="container-fluid">
-    <div class="col-md-6 col-xs-10 col-md-offset-3 col-xs-offset-1">
-      <div class="row">
-        <div id="calcButtons" class="col-xs-6 well">
-          <div class="row">
-            <div class="col-xs-6">
-              <!--Not ready yet -->
-              <!-- <p id="equation">&nbsp;</p> -->
-            </div>
-            <div class="col-xs-6">
-              <!-- <p>Current value: </p> -->
-              <p id="current" align="right">0</p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-xs-9">
-              <div class="row no-gutter">
-                <div class="col-xs-4">
-                  <button id="clearKey" type="button" class="btn btn-default btn-block first">AC</button>
-                </div>
-                <div class="col-xs-4">
-                  <button id="negKey" type="button" class="btn btn-default btn-block"><sup>+</sup>/-</button>
-                </div>
-                <div class="col-xs-4">
-                  <button id="dividesKey" type="button" class="btn btn-default btn-block">/</button>
-                </div>
-              </div>
-              <div class="row no-gutter">
-                <div class="col-xs-4">
-                  <button id="num7" type="button" class="btn btn-default btn-block">7</button>
-                </div>
-                <div class="col-xs-4">
-                  <button id="num8" type="button" class="btn btn-default btn-block">8</button>
-                </div>
-                <div class="col-xs-4">
-                  <button id="num9" type="button" class="btn btn-default btn-block">9</button>
-                </div>
-              </div>
-              <div class="row no-gutter">
-                <div class="col-xs-4">
-                  <button id="num4" type="button" class="btn btn-default btn-block">4</button>
-                </div>
-                <div class="col-xs-4">
-                  <button id="num5" type="button" class="btn btn-default btn-block">5</button>
-                </div>
-                <div class="col-xs-4">
-                  <button id="num6" type="button" class="btn btn-default btn-block">6</button>
-                </div>
-              </div>
-              <div class="row no-gutter">
-                <div class="col-xs-4">
-                  <button id="num1" type="button" class="btn btn-default btn-block">1</button>
-                </div>
-                <div class="col-xs-4">
-                  <button id="num2" type="button" class="btn btn-default btn-block">2</button>
-                </div>
-                <div class="col-xs-4">
-                  <button id="num3" type="button" class="btn btn-default btn-block">3</button>
-                </div>
-              </div>
-              <div class="row no-gutter">
-                <div class="col-xs-8">
-                  <button id="num0" type="button" class="btn btn-default btn-block">0</button>
-                </div>
-                <div class="col-xs-4">
-                  <button id="dot" type="button" class="btn btn-default btn-block">.</button>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-xs-3">
-              <div class="row no-gutter">
-                <div class="col-xs-12">
-                  <button id="timesKey" type="button" class="btn btn-default btn-block">*</button>
-                </div>
-              </div>
-              <div class="row no-gutter">
-                <div class="col-xs-12">
-                  <button id="minusKey" type="button" class="btn btn-default btn-block">-</button>
-                </div>
-              </div>
-              <div class="row no-gutter">
-                <div class="col-xs-12">
-                  <button id="plusKey" type="button" class="btn btn-default btn-block">+</button>
-                </div>
-              </div>
-              <div class="row no-gutter">
-                <div class="col-xs-12">
-                  <button id="enterKey" type="button" class="btn btn-default btn-block last">enter</button>
-                </div>
-              </div>
-          </div>
+  </head>
+  <body>
+    <div class="parent">
+      <div id="calcButtons" class="child">
+        <div class="row result">
+          <p id="current">0</p>
+        </div>
+        <div class="row">
+          <button id="c" class="btn">AC</button><button id="neg" class="btn">+/-</button><button id="%" class="btn">%</button><button id="/" class="btn btnOperator">/</button>
+        </div>
+        <div class="row">
+          <button id="7" class="btn">7</button><button id="8" class="btn">8</button><button id="9" class="btn">9</button><button id="*" class="btn btnOperator">*</button>
+        </div>                                                                                       
+        <div class="row">                                                                            
+          <button id="4" class="btn">4</button><button id="5" class="btn">5</button><button id="6" class="btn">6</button><button id="-" class="btn btnOperator">-</button>
+        </div>                                                                                       
+        <div class="row">                                                                            
+          <button id="1" class="btn">1</button><button id="2" class="btn">2</button><button id="3" class="btn">3</button><button id="+" class="btn btnOperator">+</button>
+        </div>
+        <div class="row">
+          <button id="0" class="btn btnX2">0</button><button id="." class="btn">.</button><button id="=" class="btn btnOperator">=</button>
         </div>
       </div>
-      <div id="totalDiv" class="col-xs-6 well">
-        <p>Total: </p>
-        <p id="result">0</p>
-      </div>
     </div>
-    <div class="row">
-      <p>A version with an update to the UI and using <a href="https://www.w3.org/TR/css-flexbox-1/">flex</a> can be found <a href="./index_flex.html">here.</a></p>
-    </div>
-  </div>
-  <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
-  <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>
-  <script src="js/calc.js"></script>
-</body>
+    
+    <script src="bundle.js"></script>
+  </body>
+  
+<!--Problems: 2) not yet mobile ready -->
 </html>
