--- a/index.html
+++ b/index.html
@@ -11,27 +11,28 @@
     <div class="parent">
       <div id="calcButtons" class="child">
         <div class="row result">
-          <p id="current">0</p>
+          <p id="display">0</p>
         </div>
         <div class="row">
-          <button id="c" class="btn">AC</button><button id="neg" class="btn">+/-</button><button id="%" class="btn">%</button><button id="/" class="btn btnOperator">/</button>
+          <button id="clear" class="btn">AC</button><button id="neg" class="btn">+/-</button><button id="%" class="btn">%</button><button id="divide" class="btn btnOperator">/</button>
         </div>
         <div class="row">
-          <button id="7" class="btn">7</button><button id="8" class="btn">8</button><button id="9" class="btn">9</button><button id="*" class="btn btnOperator">*</button>
+          <button id="seven" class="btn">7</button><button id="eight" class="btn">8</button><button id="nine" class="btn">9</button><button id="multiply" class="btn btnOperator">*</button>
         </div>                                                                                       
         <div class="row">                                                                            
-          <button id="4" class="btn">4</button><button id="5" class="btn">5</button><button id="6" class="btn">6</button><button id="-" class="btn btnOperator">-</button>
+          <button id="four" class="btn">4</button><button id="five" class="btn">5</button><button id="six" class="btn">6</button><button id="subtract" class="btn btnOperator">-</button>
         </div>                                                                                       
         <div class="row">                                                                            
-          <button id="1" class="btn">1</button><button id="2" class="btn">2</button><button id="3" class="btn">3</button><button id="+" class="btn btnOperator">+</button>
+          <button id="one" class="btn">1</button><button id="two" class="btn">2</button><button id="three" class="btn">3</button><button id="add" class="btn btnOperator">+</button>
         </div>
         <div class="row">
-          <button id="0" class="btn btnX2">0</button><button id="." class="btn">.</button><button id="=" class="btn btnOperator">=</button>
+          <button id="zero" class="btn btnX2">0</button><button id="decimal" class="btn">.</button><button id="equals" class="btn btnOperator">=</button>
         </div>
       </div>
     </div>
     
     <script src="bundle.js"></script>
+    <script src="https://gitcdn.link/repo/freeCodeCamp/testable-projects-fcc/master/build/bundle.js"></script>
   </body>
   
 <!--Problems: 2) not yet mobile ready -->
